연도&가수별 앨범 수 카운트하는 API
