# src/main/java/io/github/jk6841/kakaoenterprise/api/song/db/dto/YearlyArtistAlbumCount.java
@@ -1,0 +1,8 @@
+package io.github.jk6841.kakaoenterprise.api.song.db.dto;
+
+public record YearlyArtistAlbumCount(
+        Integer year,
+        String artist,
+        Integer albumCount
+) {
+}
